# ChangeLog for dev-ruby/webrat
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2

  16 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump with selenium improvements and bug fixes.

  14 Apr 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Remove old versions.

  24 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump with Rails 2.3.x compatibility.

  28 Feb 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog, +webrat-0.4.2.ebuild:
  Version bump.
