@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST webrat-0.4.3.gem 5051392 RMD160 60cf2169c8a4782d4854a84e251fa0c0bd6c9536 SHA1 d64228fa850e256000b4893f36540f157d6f8934 SHA256 9cd9edf6b48a4d5f48334ede4bd92cb675d7638ac353ba6be09e5ac8d47e8063
 DIST webrat-0.4.4.gem 5052416 RMD160 9aa5781f915bc127c43100c00684f7cf5ed18f23 SHA1 7df08151386d3ad0009c9167ec81c831ea2a883b SHA256 10eb0ef02035b4f64ee9ed691a039b7d3ab4536e49344668805beb7adda0a01c
+DIST webrat-0.5.0.gem 5292032 RMD160 5e0998f3313540d02ff57db78402e7398bf989b7 SHA1 b262cd0acc2bb0f24ecfebf26eb8fd7bfd0fd346 SHA256 18b4db06127736a06042531f184e11768c856a22a89329c9ba00f19710f6cbac
 EBUILD webrat-0.4.3.ebuild 450 RMD160 77d31061405babe7a0737eabafadf16c4ce3d438 SHA1 481f5197b7fd6cd3171eec7d9e3a2bf23c1da17f SHA256 aa2c2716b6e7b459ca1b2d727940f2b37cabc2fb60948c4ef1946f401ad60896
 EBUILD webrat-0.4.4.ebuild 450 RMD160 77d31061405babe7a0737eabafadf16c4ce3d438 SHA1 481f5197b7fd6cd3171eec7d9e3a2bf23c1da17f SHA256 aa2c2716b6e7b459ca1b2d727940f2b37cabc2fb60948c4ef1946f401ad60896
-MISC ChangeLog 516 RMD160 eaf984d18ba3c9c91c93aa23b29a0e90a2806884 SHA1 81b83669a2741037f0f826d7dbf7c2610c18a605 SHA256 d3399861d1975720d611a37f94af0b6f590ebf2c5c8ec7b0a6eeb5b0e0f84546
+EBUILD webrat-0.5.0.ebuild 469 RMD160 f77d6cae75f48c28178c0986239eddf1043b9259 SHA1 9be2f610464154365a5313971dced87949eb7495 SHA256 d79654518e8294cb6179b023ae5bdc3773244c6166eb6f1fb1c0611b001a753e
+MISC ChangeLog 634 RMD160 7805b68c72f44777162c938a178dd71ac8379a7c SHA1 6faf8d84f200e95b97a5f8a3692864ac7945b494 SHA256 6ad24b96263282f72d77b338cffceec209828e187e8ae5d23c3b8378517849ad
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkqJnloACgkQVYU2Ai8K93cuGQCghj/V41NDhLUg0ekHdomN6KUs
+zpgAn0W/D8ryPZFaSTIm1GKdFO3WmqB8
+=Culg
+-----END PGP SIGNATURE-----
