@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/webrat
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 
+*webrat-0.5.0 (17 Aug 2009)
+
+  17 Aug 2009; Hans de Graaff <graaff@gentoo.org> +webrat-0.5.0.ebuild:
+  Version bump.
+
   16 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
   Version bump with selenium improvements and bug fixes.
 
